--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <img src="./assets/images/icon-dev.svg" alt="ikon pengembangan web" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Pengembangan Web</h4>
+                <h4 class="h4 service-item-title">Pengembangan Website</h4>
                 <p class="service-item-text">Proyek freelance basic PHP framework Laravel.</p>
               </div>
             </li>
