--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <section class="about-text">
           <p>
 
-            "Sebagai lulusan baru dari Sistem Informasi Universitas Teknologi Yogyakarta tahun 2023, saya sangat
+            Sebagai lulusan baru dari Sistem Informasi Universitas Teknologi Yogyakarta tahun 2023, saya sangat
             antusias untuk terjun ke dalam industri teknologi dengan fokus pada Pengembangan Web Full Stack. Perjalanan
             akademik saya memberikan dasar yang kuat dalam
             pemahaman mendalam tentang analisis sistem, manajemen database, dan pengembangan sistem web secara
