--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
 
             Sebagai lulusan baru dari Sistem Informasi Universitas Teknologi Yogyakarta tahun 2023, saya sangat
             antusias untuk terjun ke dalam industri teknologi dengan fokus pada Pengembangan Web Full Stack. Perjalanan
-            akademik saya memberikan dasar yang kuat dalam
-            pemahaman mendalam tentang analisis sistem, manajemen database, dan pengembangan sistem web secara
+            akademik saya memberikan dasar yang kuat tentang analisis sistem, manajemen database, dan pengembangan sistem web secara
             menyeluruh. saya
             bersemangat untuk menerapkan pengetahuan saya dalam lingkungan kerja yang dinamis dan berkontribusi aktif
             dalam sebuah tim.
