--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             Fresh Graduate Jurusan Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat
             antusias terjun dalam industri teknologi dengan fokus pada Pengembangan Web Full Stack. Perjalanan
-            akademik saya memberikan dasar yang kuat tentang analisis, manajemen database, dan pengembangan sistem
+            akademik saya memberikan dasar yang kuat tentang analisis, manajemen basis data, dan pengembangan sistem
             berbasis website. saya
             bersemangat untuk menerapkan pengetahuan saya dalam lingkungan kerja yang dinamis dan berkontribusi aktif
             dalam sebuah tim.
