--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
   <!--- favicon-->
   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+
+  <!-- share wa -->
+  <meta property="og:title" content="Robith Yusuf | Personal Website" />
+  <meta property="og:description" content="Web Developer" />
+  <meta property="og:image" content="https://robithdev.my.id/assets/images/ppku-modified.png" />
+  <meta property="og:url" content="https://robithdev.my.id/" />
+  <meta property="og:type" content="website" />
   <!--- custom css link-->
   <link rel="stylesheet" href="./assets/css/style.css">
   <!--- google font link-->
