--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
             <li class="blog-post-item">
               <a href="#project">
                 <figure class="blog-banner-box">
-                  <img src="https://i.postimg.cc/mrj8Ffr0/image.png" alt="SI-PSB" loading="lazy">
+                  <img src="assets/images/Projects/penerimaan_siswa_baru.png" alt="SI-PSB" loading="lazy">
                 </figure>
                 <div class="blog-content">
                   <div class="blog-meta">
@@ -838,7 +838,7 @@
             <li class="blog-post-item">
               <a href="#project">
                 <figure class="blog-banner-box">
-                  <img src="https://i.postimg.cc/mrMnVkrF/Elearning-SS-2.png" alt="E-leraning" loading="lazy">
+                  <img src="assets/images/Projects/eleraning.png" alt="E-leraning" loading="lazy">
                 </figure>
                 <div class="blog-content">
                   <div class="blog-meta">
