--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <span>July 2013 — Nov 2019</span>
                 <p class="timeline-text">
 
-                  Menyelesaikan sekolah madrasah aliyah, dengan juruan IPA (Ilmu Pengetahuan Alam).
+                  Menyelesaikan sekolah madrasah aliyah, dengan jurusan IPA (Ilmu Pengetahuan Alam).
 
                 </p>
               </div>
