--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 </h4>
                 <span>Okt 2020 — Sekarang</span>
                 <p class="timeline-text">
-                  Pimpinan Komunitas Regional Kudus<br>
+                  Leader Komunitas Regional Kudus<br>
                   - Memimpin, mengembangkan, dan menyelenggarakan acara MLBB untuk wilayah Kudus.<br>
                   - Acara Turnamen: Berhasil menyelenggarakan 130 turnamen lokal (online & offline), termasuk gathering
                   dengan rata-rata 80-160 pemain berpartisipasi per acara.<br>
