--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <li class="timeline-item">
 
               <div class="experience-timeline-content">
-                <h4 class="h4 timeline-item-title">Community Hero (Program Resmi) - Moonton Indonesia (Kudus, Indonesia)
+                <h4 class="h4 timeline-item-title">Community Hero MLBB (Program Resmi) - Moonton Indonesia (Kudus, Indonesia)
                 </h4>
                 <span>Okt 2020 — Sekarang</span>
                 <p class="timeline-text">
