--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
                 <p class="service-item-text">UML Desain, SQL Databse Desain, & Interface UI/UX Desain Sistem.</p>
               </div>
             </li>
-
             <li class="service-item">
               <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.svg" alt="ikon pengembangan web" width="40">
@@ -386,9 +385,7 @@
                 <h4 class="h4 timeline-item-title">Madrasah Aliyah Ma'had Al Zaytun</h4>
                 <span>July 2013 — Nov 2019</span>
                 <p class="timeline-text">
-
                   Menyelesaikan sekolah madrasah aliyah, dengan jurusan IPA (Ilmu Pengetahuan Alam).
-
                 </p>
               </div>
             </li>
@@ -439,7 +436,8 @@
             <li class="timeline-item">
 
               <div class="experience-timeline-content">
-                <h4 class="h4 timeline-item-title">Community Hero MLBB (Program Resmi) - Moonton Indonesia (Kudus, Indonesia)
+                <h4 class="h4 timeline-item-title">Community Hero MLBB (Program Resmi) - Moonton Indonesia (Kudus,
+                  Indonesia)
                 </h4>
                 <span>Okt 2020 — Sekarang</span>
                 <p class="timeline-text">
@@ -676,6 +674,18 @@
                 </figure>
                 <h3 class="project-title">Certificate Partisipan</h3>
                 <p class="project-category">IoT Introduction</p>
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="out academic">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/certificate/css_mini_projec.png" alt="cssminiproject." loading="lazy">
+                </figure>
+                <h3 class="project-title">Certificate Pengembangan SKill</h3>
+                <p class="project-category">Partisipan</p>
               </a>
             </li>
 
