--- a/index.html
+++ b/index.html
@@ -685,7 +685,31 @@
                   <img src="./assets/images/certificate/css_mini_projec.png" alt="cssminiproject." loading="lazy">
                 </figure>
                 <h3 class="project-title">Certificate Pengembangan SKill</h3>
-                <p class="project-category">Partisipan</p>
+                <p class="project-category">Responsive Project</p>
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="out academic">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/certificate/ui_desain.png" alt="ui_desain." loading="lazy">
+                </figure>
+                <h3 class="project-title">Certificate Pengembangan SKill</h3>
+                <p class="project-category">UI/UX Design</p>
+              </a>
+            </li>
+            <li class="project-item  active" data-filter-item data-category="out academic">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/certificate/ux_design.png" alt="ux_design." loading="lazy">
+                </figure>
+                <h3 class="project-title">Certificate Pengembangan SKill</h3>
+                <p class="project-category">UI/UX Design</p>
               </a>
             </li>
 
