--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
           <p>
 
             Fresh Graduate Jurusan Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat
-            antusias terjun dalam industri teknologi dengan fokus pada Pengembangan Web Full Stack. Perjalanan
-            akademik saya memberikan dasar yang kuat tentang analisis, manajemen basis data, dan pengembangan sistem
+            antusias dalam industri teknologi informasi dengan fokus Pengembangan Full Stack Developer. Perjalanan
+            akademik saya memberikan dasar yang kuat mengenai analisis perancangan, manajemen basis data, dan pengembangan sistem
             berbasis website. saya
             bersemangat untuk menerapkan pengetahuan saya dalam lingkungan kerja yang dinamis dan berkontribusi aktif
             dalam sebuah tim.
