--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 
             Fresh Graduate Jurusan Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat
             antusias dalam industri teknologi informasi dengan fokus Pengembangan Full Stack Developer. Perjalanan
-            akademik saya memberikan dasar yang kuat mengenai analisis perancangan, manajemen basis data, dan pengembangan sistem
+            akademik saya memberikan dasar yang kuat mengenai analisis perancangan, manajemen basis data, dan
+            pengembangan sistem
             berbasis website. saya
             bersemangat untuk menerapkan pengetahuan saya dalam lingkungan kerja yang dinamis dan berkontribusi aktif
             dalam sebuah tim.
@@ -170,28 +171,31 @@
         <!--- service-->
         <!--- service-->
         <section class="service">
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Layanan Saya</h3>
           <ul class="service-list">
             <li class="service-item">
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg" alt="ikon desain" width="40">
+              <div class="service-icon-box"> <img src="./assets/images/icon-design.svg" alt="ikon desain" width="40">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Analisis & Desain Sistem</h4>
-                <p class="service-item-text">UML Desain, SQL Databse Desain, & Interface UI/UX Desain Sistem.</p>
+                <p class="service-item-text">Merancang sistem secara menyeluruh dengan UML, mendesain
+                  database SQL yang efisien, serta menciptakan interface menarik dan ramah bagi pengguna.</p>
               </div>
             </li>
             <li class="service-item">
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="ikon pengembangan web" width="40">
-              </div>
+              <div class="service-icon-box"> <img src="./assets/images/icon-dev.svg" alt="ikon pengembangan web"
+                  width="40"> </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Pengembangan Website</h4>
-                <p class="service-item-text">Proyek freelance basic PHP framework Laravel.</p>
+                <h4 class="h4 service-item-title">Pengembangan Aplikasi Web</h4>
+                <p class="service-item-text">Mengembangkan aplikasi web yang professionalenggunakan
+                  framework Laravel, salah satu framework PHP terpopuler dan fleksibel di industri.</p>
               </div>
             </li>
           </ul>
         </section>
+    
+
+
 
         <!--- testimonials-->
         <!--- testimonials modal-->
