--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   width="40"> </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Pengembangan Aplikasi Web</h4>
-                <p class="service-item-text">Mengembangkan aplikasi web yang professionalenggunakan
+                <p class="service-item-text">Mengembangkan aplikasi website yang professionalenggunakan
                   framework Laravel, salah satu framework PHP terpopuler dan fleksibel di industri.</p>
               </div>
             </li>
