--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!--- service-->
         <!--- service-->
         <section class="service">
-          <h3 class="h3 service-title">Layanan Saya</h3>
+          <h3 class="h3 service-title">What I'm Doing</h3>
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box"> <img src="./assets/images/icon-design.svg" alt="ikon desain" width="40">
