--- a/index.html
+++ b/index.html
@@ -735,14 +735,13 @@
 
       <article class="book" data-page="project">
         <header>
-          <h2 class="h2 article-title">Project </h2>
+          <h2 class="h2 article-title">Projects </h2>
         </header>
 
 
         <section class="book-posts">
           <div class="section-header">
-            <p class="section-description">Showcasing my passion for technology, design, and problem-solving through
-              code.</p>
+            <p class="section-description">Menampilkan miant saya terhadap teknologi, desain dan pemecahan masalah melalui code.</p>
           </div>
           <ul class="blog-posts-list">
 
