--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 
         <section class="book-posts">
           <div class="section-header">
-            <p class="section-description">Menampilkan miant saya terhadap teknologi, desain dan pemecahan masalah melalui code.</p>
+            <p class="section-description">Menampilkan minat saya terhadap teknologi, desain dan pemecahan masalah melalui code.</p>
           </div>
           <ul class="blog-posts-list">
 
