--- a/index.html
+++ b/index.html
@@ -741,13 +741,14 @@
 
         <section class="book-posts">
           <div class="section-header">
-            <p class="section-description">Menampilkan minat saya terhadap teknologi, desain dan pemecahan masalah melalui code.</p>
+            <p class="section-description">Menampilkan minat saya terhadap teknologi, desain dan pemecahan masalah
+              melalui code.</p>
           </div>
           <ul class="blog-posts-list">
 
             <!-- 1 -->
             <li class="blog-post-item">
-              <a href="#projects">
+              <a href="#project">
                 <figure class="blog-banner-box">
                   <img src="assets/images/Projects/ecommerce.png" alt="E-commerce" loading="lazy">
                 </figure>
