--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <a href="#certificate" class="navbar-link" data-nav-link>Certificate</a>
           </li>
           <li class="navbar-item">
-            <a href="#project" class="navbar-link" data-nav-link>Project</a>
+            <a href="#project" class="navbar-link" data-nav-link>Projects</a>
           </li>
           <li class="navbar-item">
             <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
