--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title> Robith Yusuf | Web Dev </title>
 
   <!--- favicon-->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/ppku-modified.png" type="image/x-icon">
 
   <!-- share wa -->
   <meta property="og:title" content="Robith Yusuf | Personal Website" />
