--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </figure>
         <div class="info-content">
           <h1 class="name" title="Robith Yusuf Al Fahsa">Robith Yusuf Al Fahsa</h1>
+          <p class="username">@robith_ya</p>
           <p class="title">Web Developer</p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
