--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
           <img src="./assets/images/ppku-modified.png" alt="Robith Yusuf Al Fahsa" width="80">
         </figure>
         <div class="info-content">
-          <h1 class="name" title="Robith Yusuf Al Fahsa">Robith Yusuf Al Fahsa</h1>
+          <h1 class="name" title="Robith Yusuf Al Fahsa">
+            <span class="name-text">Robith Yusuf Al Fahsa</span>
+            <span class="verified-icon">
+              <img src="./assets/images/centang.png" alt="Verified" height="24px" width="24px">
+            </span>
+          </h1>
           <p class="username">@robith_ya</p>
           <p class="title">Web Developer</p>
         </div>
