--- a/index.html
+++ b/index.html
@@ -422,9 +422,11 @@
             <li class="timeline-item">
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">University Technology Yogyakarta</h4>
-                <span>Oct 2019 — July 2023</span>
+                <span class="timeline-date">Oct 2019 — July 2023</span>
                 <p class="timeline-text">
-                  Lulus dengan gelar S.Kom. di bidang Ilmu Komputer, menunjukkan kemahiran dalam pemrograman,
+                  Lulus dengan gelar S.Kom. di bidang Ilmu Komputer, Dengan <strong>IPK 3.49</strong> menunjukkan
+                  kemahiran dalam
+                  pemrograman,
 
                   pemecahan masalah,
                   dan pengembangan perangkat lunak. Bersemangat untuk menerapkan pengetahuan dalam industri teknologi
@@ -436,7 +438,7 @@
             <li class="timeline-item">
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Madrasah Aliyah Ma'had Al Zaytun</h4>
-                <span>July 2013 — Nov 2019</span>
+                <span class="timeline-date">July 2013 — Nov 2019</span>
                 <p class="timeline-text">
                   Menyelesaikan sekolah madrasah aliyah, dengan jurusan IPA (Ilmu Pengetahuan Alam).
                 </p>
@@ -455,70 +457,70 @@
           <ol class="timeline-list">
             <!-- Freelance Web Developer -->
             <li class="timeline-item">
-
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Freelance Web Developer (Kudus, Indonesia)</h4>
-                <span>Feb 2023 — Sekarang</span>
+                <span class="timeline-date">Feb 2023 — Sekarang</span>
                 <p class="timeline-text">
                   Full-stack Developer - Laravel<br>
-                  - Membangun beberapa proyek website siap pakai.<br>
-                  - Merancang kebutuhan fitur yang diinginkan.<br>
-                  - Memastikan website dibangun sesuai kebutuhan pengguna.<br>
-                  - Mengimplementasikan solusi inovatif untuk memenuhi kebutuhan pengguna dalam membuat fitur pada
-                  website.
+                  <span class="timeline-text-detail">Membangun beberapa proyek website siap pakai.</span>
+                  <span class="timeline-text-detail">Merancang kebutuhan fitur yang diinginkan.</span>
+                  <span class="timeline-text-detail">Memastikan website dibangun sesuai kebutuhan pengguna.</span>
+                  <span class="timeline-text-detail">Mengimplementasikan solusi inovatif untuk memenuhi kebutuhan
+                    pengguna dalam membuat fitur pada website.</span>
                 </p>
               </div>
             </li>
             <!-- Yayasan Aswirusani An-Naba -->
             <li class="timeline-item">
-
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Yayasan Aswirusani An-Naba (Rembang, Indonesia)</h4>
-                <span>Okt 2019 — Sekarang</span>
+                <span class="timeline-date">Okt 2019 — Sekarang</span>
                 <p class="timeline-text">
                   Tim Kreatif<br>
-                  - Membuat ide konten untuk poster, banner, dan materi untuk setiap agenda kegiatan program
-                  yayasan.<br>
-                  - Dokumentasi dan editing video pendek kegiatan acara.<br>
-                  - Membantu berpartisipasi dalam acara program sosial kemasyarakatan.<br>
-                  - Mengelola semua konten media sosial & website yayasan.
+                  <span class="timeline-text-detail">Membuat ide konten untuk poster, banner, dan materi untuk setiap
+                    agenda kegiatan program yayasan.</span>
+                  <span class="timeline-text-detail">Dokumentasi dan editing video pendek kegiatan acara.</span>
+                  <span class="timeline-text-detail">Membantu berpartisipasi dalam acara program sosial
+                    kemasyarakatan.</span>
+                  <span class="timeline-text-detail">Mengelola semua konten media sosial & website yayasan.</span>
                 </p>
               </div>
             </li>
             <!-- Community Hero (Official Program) - Moonton Indonesia -->
             <li class="timeline-item">
-
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Community Hero MLBB (Program Resmi) - Moonton Indonesia (Kudus,
-                  Indonesia)
-                </h4>
-                <span>Okt 2020 — Sekarang</span>
+                  Indonesia)</h4>
+                <span class="timeline-date">Okt 2020 — Sekarang</span>
                 <p class="timeline-text">
                   Leader Komunitas Regional Kudus<br>
-                  - Memimpin, mengembangkan, dan menyelenggarakan acara MLBB untuk wilayah Kudus.<br>
-                  - Acara Turnamen: Berhasil menyelenggarakan 130 turnamen lokal (online & offline), termasuk gathering
-                  dengan rata-rata 80-160 pemain berpartisipasi per acara.<br>
-                  - Keterlibatan Digital: Meningkatkan interaksi media sosial komunitas dan keterlibatan aktif dalam
-                  komunikasi.<br>
-                  - Pelatihan: Melatih dan membimbing pemain baru, memperkuat kemampuan komunitas secara
-                  keseluruhan.<br>
-                  - Umpan Balik & Komunikasi: Membentuk dan memimpin tim dalam komunitas untuk melaporkan umpan balik
-                  kepada Moonton pada setiap acara yang diselesaikan, termasuk pembaruan dalam game seperti bug, saran,
-                  dan sebagainya.
+                  <span class="timeline-text-detail">Memimpin, mengembangkan, dan menyelenggarakan acara MLBB untuk
+                    wilayah Kudus.</span>
+                  <span class="timeline-text-detail">Acara Turnamen: Berhasil menyelenggarakan 130 turnamen lokal
+                    (online & offline), termasuk gathering dengan rata-rata 80-160 pemain berpartisipasi per
+                    acara.</span>
+                  <span class="timeline-text-detail">Keterlibatan Digital: Meningkatkan interaksi media sosial komunitas
+                    dan keterlibatan aktif dalam komunikasi.</span>
+                  <span class="timeline-text-detail">Pelatihan: Melatih dan membimbing pemain baru, memperkuat kemampuan
+                    komunitas secara keseluruhan.</span>
+                  <span class="timeline-text-detail">Umpan Balik & Komunikasi: Membentuk dan memimpin tim dalam
+                    komunitas untuk melaporkan umpan balik kepada Moonton pada setiap acara yang diselesaikan, termasuk
+                    pembaruan dalam game seperti bug, saran, dan sebagainya.</span>
                 </p>
               </div>
             </li>
+
             <!-- Freelance PT Sinergi Membangun Bangsa -->
             <li class="timeline-item">
-
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Freelance PT Sinergi Membangun Bangsa (Yogyakarta, Indonesia)</h4>
-                <span>Feb 2019 — Mei 2019</span>
+                <span class="timeline-date">Feb 2019 — Mei 2019</span>
                 <p class="timeline-text">
-                  Konten Pemasaran Web<br>
-                  - Membuat konten artikel untuk promosi acara yang akan diposting di website.<br>
-                  - Optimasi SEO dan performa promosi.<br>
-                  - Mengelola 12 website untuk promosi.
+                 Marketing Content Website <br>
+                  <span class="timeline-text-detail">Membuat konten artikel untuk promosi acara yang akan diposting di
+                    website.</span>
+                  <span class="timeline-text-detail">Optimasi SEO dan performa promosi.</span>
+                  <span class="timeline-text-detail">Mengelola 12 website untuk promosi.</span>
                 </p>
               </div>
             </li>
