--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Email</p>
-              <a href="mailto:robithyusufalfahsa@gmail.com" class="contact-link">robith.dev@gmail.com</a>
+              <a href="mailto:robithdev@gmail.com" class="contact-link">robithdev@gmail.com</a>
             </div>
           </li>
           <li class="contact-item">
