--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
         </header>
         <section class="about-text">
           <p>
-            Fresh Graduate Jurusan Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat antusias dalam
-            industri teknologi informasi dengan fokus Pengembangan Full Stack Developer. Perjalanan akademik saya
-            memberikan dasar yang
-            kuat mengenai analisis perancangan, manajemen basis data, dan pengembangan sistem berbasis website. saya
+            Web Developer Freelancer & Fresh Graduate Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat
+            antusias dalam
+            industri teknologi informasi dalam fokus Pengembangan Full Stack Developer. Perjalanan akademik saya
+            memberikan dasar
+            kuat tentang analisis perancangan sistem, manajemen basis data, dan pengembangan aplikasi website. saya
             bersemangat untuk menerapkan pengetahuan saya dalam lingkungan kerja yang dinamis dan berkontribusi aktif
-            dalam sebuah
-            tim.
+            dalam sebuah tim dibidang teknologi.
           </p>
 
           <!-- <p>
