--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Analisis & Desain Sistem</h4>
                 <p class="service-item-text">Merancang sistem secara menyeluruh dengan UML, mendesain database SQL yang
-                  efisien, serta menciptakan interface menarik dan ramah bagi pengguna.</p>
+                  efisien, dan membangun interface menarik dan ramah bagi pengguna.</p>
               </div>
             </li>
             <li class="service-item">
