--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
-              <a href="tel:+6283126904714" class="contact-link">+62 851 6304 4714</a>
+              <a href="https://wa.me/6285163044714" class="contact-link">+62 851 6304 4714</a>
+           
             </div>
           </li>
 
