--- a/index.html
+++ b/index.html
@@ -68,16 +68,15 @@
               <a href="mailto:robithdev@gmail.com" class="contact-link">robithdev@gmail.com</a>
             </div>
           </li>
-          <li class="contact-item">
+          <!-- <li class="contact-item">
             <div class="icon-box">
               <ion-icon name="phone-portrait-outline"></ion-icon>
             </div>
             <div class="contact-info">
               <p class="contact-title">Phone</p>
               <a href="https://wa.me/6285163044714" class="contact-link">+62 851 6304 4714</a>
-           
             </div>
-          </li>
+          </li> -->
 
           <li class="contact-item">
             <div class="icon-box">
