--- a/index.html
+++ b/index.html
@@ -440,13 +440,13 @@
               </div>
             </li>
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
               <div class="experience-timeline-content">
                 <h4 class="h4 timeline-item-title">Madrasah Aliyah Ma'had Al Zaytun</h4>
                 <span class="timeline-date">July 2013 — Nov 2019</span>
                 <p class="timeline-text">Completed madrasah aliyah school, majoring in natural sciences.</p>
               </div>
-            </li>
+            </li> -->
           </ol>
         </section>
         <section class="timeline">
