--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -73,7 +74,7 @@
               <ion-icon name="phone-portrait-outline"></ion-icon>
             </div>
             <div class="contact-info">
-              <p class="contact-title">Phone</p>
+              <p class="contact-title">WA/SMS</p>
               <a href="https://wa.me/6285163044714" class="contact-link">+62 851 6304 4714</a>
             </div>
           </li> -->
@@ -131,19 +132,34 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
-            <a href="#about" class="navbar-link active" data-nav-link>About</a>
+            <a href="#about" class="navbar-link active" data-nav-link>
+              <i class="fas fa-user"></i>
+              <span>About</span>
+            </a>
           </li>
           <li class="navbar-item">
-            <a href="#resume" class="navbar-link" data-nav-link>Resume</a>
+            <a href="#resume" class="navbar-link" data-nav-link>
+              <i class="fas fa-file-alt"></i>
+              <span>Resume</span>
+            </a>
           </li>
           <li class="navbar-item">
-            <a href="#certificate" class="navbar-link" data-nav-link>Certificate</a>
+            <a href="#certificate" class="navbar-link" data-nav-link>
+              <i class="fas fa-certificate"></i>
+              <span>Certificate</span>
+            </a>
           </li>
           <li class="navbar-item">
-            <a href="#project" class="navbar-link" data-nav-link>Projects</a>
+            <a href="#project" class="navbar-link" data-nav-link>
+              <i class="fas fa-project-diagram"></i>
+              <span>Projects</span>
+            </a>
           </li>
           <li class="navbar-item">
-            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
+            <a href="#contact" class="navbar-link" data-nav-link>
+              <i class="fas fa-envelope"></i>
+              <span>Contact</span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -240,10 +256,13 @@
               </svg>
               <p class="skill-name">CodeIgniter</p>
             </li>
-            <li class="clients-item">
 
+            <!-- Jquery -->
+            <li class="clients-item">
               <svg height="2282" viewBox="-1.19275382 .5 25.19275382 24.582" width="2500"
                 xmlns="http://www.w3.org/2000/svg">
+                <title>JQuery</title>
+
                 <path
                   d="m1.406 16.346c.023.052.049.1.077.148.013.028.031.057.047.083.026.052.054.102.081.152l.157.264c.029.049.057.097.09.145.055.094.12.186.177.28.026.039.05.078.079.117.11.171.21.313.317.451.076.103.152.204.234.305.027.038.057.076.085.114l.221.268c.027.031.054.067.083.099.098.118.202.232.306.348 0 .002.003.004.005.007.129.162.268.306.42.434l.004.004c.08.082.16.163.245.243l.101.097c.111.104.222.207.339.307.002 0 .003.002.005.003l.057.05c.102.089.205.177.31.259l.125.105c.085.068.173.132.26.199l.136.104c.093.07.192.138.287.206.035.025.07.05.106.073l.029.023.281.184.12.08c.147.094.293.182.439.27.042.021.084.044.123.068.108.062.22.125.329.182.06.034.122.063.184.094.075.042.153.083.233.125.022.007.04.014.058.024l.004-.004c.033.015.064.031.096.047.12.06.245.117.375.173.024.01.05.02.076.034.144.063.288.123.437.181.034.01.07.027.105.04.135.051.274.103.412.152l.05.018c.153.052.304.102.46.149.036.01.073.023.111.033.159.048.313.105.474.135 10.273 1.863 13.258-6.146 13.258-6.146-2.508 3.25-6.959 4.107-11.174 3.153-.156-.036-.312-.086-.47-.132a11.753 11.753 0 0 1 -.663-.209l.095.029-.062-.024c-.136-.046-.267-.097-.4-.148a1.53 1.53 0 0 0 -.099-.038l-.011-.003c-.147-.059-.29-.119-.432-.182-.031-.01-.057-.024-.088-.036a13.656 13.656 0 0 1 -.5-.23l.138.061a1.483 1.483 0 0 1 -.106-.052c-.094-.044-.188-.094-.28-.141a3.784 3.784 0 0 1 -.207-.106l.02.01c-.113-.06-.226-.125-.34-.186-.034-.024-.073-.044-.112-.066a14.058 14.058 0 0 1 -.502-.306l.063.038a2.042 2.042 0 0 1 -.124-.083l.006.004a6.039 6.039 0 0 1 -.316-.208c-.034-.022-.065-.046-.1-.07a8.47 8.47 0 0 1 -.318-.228l.024.017c-.042-.034-.087-.066-.132-.099-.088-.069-.177-.135-.265-.207l-.118-.094a10.16 10.16 0 0 1 -.37-.309l-.001-.001-.347-.315-.1-.094c-.082-.083-.166-.162-.25-.244l-.097-.1a9.008 9.008 0 0 1 -.303-.315l-.006-.007-.017-.014a17.877 17.877 0 0 1 -.313-.353c-.027-.031-.052-.064-.08-.097l-.227-.275a13.75 13.75 0 0 1 -.3-.391l-.04-.056c-2.338-3.176-3.184-7.559-1.313-11.155l-1.652 2.089c-2.125 3.039-1.862 6.991-.237 10.218.037.079.078.153.118.228z"
                   fill="#1266a9" />
@@ -258,6 +277,24 @@
               </svg>
               <p class="skill-name">JQuery</p>
             </li>
+
+            <!-- Tailwind CSS-->
+            <li class="clients-item">
+              <svg class="w-6 h-6" viewBox="0 0 256 153.6" xmlns="http://www.w3.org/2000/svg">
+                <title>Tailwind CSS</title>
+                <defs>
+                  <linearGradient id="tailwind-gradient" x1="-2.778%" y1="32%" y2="67.556%">
+                    <stop offset="0" stop-color="#2298bd" />
+                    <stop offset="1" stop-color="#0ed7b5" />
+                  </linearGradient>
+                </defs>
+                <path
+                  d="M128 0C93.867 0 72.533 17.067 64 51.2 76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0zM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2 9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8z"
+                  fill="url(#tailwind-gradient)" />
+              </svg>
+              <p class="skill-name">Tailwind</p>
+            </li>
+
 
             <!-- Laravel-->
             <li class="clients-item">
@@ -293,7 +330,7 @@
                   d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z">
                 </path>
               </svg>
-              <p class="skill-name">HTML</p>
+              <p class="skill-name">HTML 5</p>
             </li>
             <!-- JS -->
             <li class="clients-item">
@@ -537,10 +574,10 @@
           <ul class="skills-list content-card">
             <li class="skills-item">
               <div class="title-wrapper">
-                <h6 class="h6">HTML & CSS</h6>
+                <h6 class="h5">HTML & CSS</h6>
               </div>
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%"></div>
+                <div class="skill-progress-fill" style="width: 90%"></div>
               </div>
             </li>
             <li class="skills-item">
@@ -549,7 +586,7 @@
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 85%"></div>
+                <div class="skill-progress-fill" style="width: 95%"></div>
               </div>
             </li>
 
@@ -558,7 +595,7 @@
                 <h6 class="h5">Javascript</h6>
               </div>
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%"></div>
+                <div class="skill-progress-fill" style="width: 67%"></div>
               </div>
             </li>
             <li class="skills-item">
@@ -566,7 +603,7 @@
                 <h6 class="h5">PHP</h6>
               </div>
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%"></div>
+                <div class="skill-progress-fill" style="width: 90%"></div>
               </div>
             </li>
             <li class="skills-item">
@@ -574,40 +611,40 @@
                 <h6 class="h5">MySQL & relational databases</h6>
               </div>
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%"></div>
+                <div class="skill-progress-fill" style="width: 95%"></div>
               </div>
             </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h6 class="h5">UML Design</h6>
-              </div>
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%"></div>
-              </div>
-            </li>
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h6 class="h5">Photosop, Canva</h6>
+                <h6 class="h5">UML Design System</h6>
               </div>
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 85%"></div>
               </div>
             </li>
+            <li class="skills-item">
+              <div class="title-wrapper">
+                <h6 class="h5">Photosop, Canva, Figma</h6>
+              </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 83%"></div>
+              </div>
+            </li>
           </ul>
           <div class="experience-levels">
-            <div class="experience pemula">
+            <div class="experience">
               <span class="experience-icon">|</span>
               <span class="experience-label">Beginner</span>
             </div>
-            <div class="experience menguasai-dasar">
+            <div class="experience">
               <span class="experience-icon">|</span>
               <span class="experience-label">Mastering the Basics</span>
             </div>
-            <div class="experience mahir">
+            <div class="experience">
               <span class="experience-icon">|</span>
               <span class="experience-label">Proficient</span>
             </div>
-            <div class="experience sangat-terampil">
+            <div class="experience">
               <span class="experience-icon">|</span>
               <span class="experience-label">Highly Skilled</span>
             </div>
