refactor: education (resume)

--- a/index.html
+++ b/index.html
@@ -477,13 +477,13 @@
               </div>
             </li>
 
-            <!-- <li class="timeline-item">
+            <li class="timeline-item">
               <div class="experience-timeline-content">
-                <h4 class="h4 timeline-item-title">Madrasah Aliyah Ma'had Al Zaytun</h4>
+                <h4 class="h4 timeline-item-title">Madrasah Aliyah MAZ</h4>
                 <span class="timeline-date">July 2013 — Nov 2019</span>
-                <p class="timeline-text">Completed madrasah aliyah school, majoring in natural sciences.</p>
+                <p class="timeline-text">Completed madrasah aliyah islamic school, majoring in natural sciences.</p>
               </div>
-            </li> -->
+            </li>
           </ol>
         </section>
         <section class="timeline">
@@ -500,7 +500,7 @@
                 <h4 class="h4 timeline-item-title">Freelance Web Developer (Kudus, Indonesia)</h4>
                 <span class="timeline-date">Feb 2023 — Sekarang</span>
                 <p class="timeline-text">
-                  Full-stack Developer - Laravel<br />
+                  Full-stack - Laravel Developer<br />
                   <span class="timeline-text-detail">Build some ready-made website projects.</span>
                   <span class="timeline-text-detail">Design the desired feature requirements.</span>
                   <span class="timeline-text-detail">Ensure the website is built according to user needs.</span>
@@ -515,7 +515,7 @@
                 <h4 class="h4 timeline-item-title">Yayasan Aswirusani An-Naba (Rembang, Indonesia)</h4>
                 <span class="timeline-date">Okt 2019 — Sekarang</span>
                 <p class="timeline-text">
-                  Tim Kreatif<br />
+                  Team Creative<br />
                   <span class="timeline-text-detail">Creating content ideas for posters, banners, and materials for each
                     agenda of the foundation's program activities.</span>
                   <span class="timeline-text-detail">Documentation and editing of short videos of event
