refactor: about me

--- a/index.html
+++ b/index.html
@@ -174,12 +174,8 @@
         </header>
         <section class="about-text">
           <p>
-            As a passionate Web Developer Freelancer and Fresh Graduate from the Information Systems program at
-            Universitas Teknologi Yogyakarta (2023), I am excited to leverage my strong foundation in full stack
-            development, systems analysis and design, and database management to actively contribute to a
-            technology-driven team. With a solid command of front-end and back-end technologies, as well as experience
-            with popular frameworks, I am eager to apply my knowledge and skills in a dynamic work environment, tackling
-            complex development challenges and delivering high-quality, innovative web solutions.
+            As a passionate and experienced Web Developer Freelancer with a background in Information Systems from Universitas Teknologi Yogyakarta (2023). I am excited to leverage my strong foundation in full stack development, systems analysis and design, and database management. With a solid command of front-end and back-end technologies, as well as experience
+            with popular frameworks,  I am able to overcome problems that occur by providing quality innovative web solutions to meet and solve client problems.
             <!-- Web Developer Freelancer & Fresh Graduate Sistem Informasi Universitas Teknologi Yogyakarta (2023), sangat
             antusias dalam
             industri teknologi informasi dalam fokus Pengembangan Full Stack Developer. Perjalanan akademik
@@ -235,6 +231,7 @@
             My Skills
           </h3>
           <ul class="clients-list has-scrollbar">
+            
             <!-- PHP -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -295,7 +292,6 @@
               <p class="skill-name">Tailwind</p>
             </li>
 
-
             <!-- Laravel-->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -307,6 +303,7 @@
               </svg>
               <p class="skill-name">Laravel</p>
             </li>
+
             <!-- Boostrap-->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="text-purple"
@@ -321,6 +318,7 @@
               </svg>
               <p class="skill-name">Bootstrap</p>
             </li>
+
             <!-- HTML -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -332,6 +330,7 @@
               </svg>
               <p class="skill-name">HTML 5</p>
             </li>
+
             <!-- JS -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -343,6 +342,7 @@
               </svg>
               <p class="skill-name">JavaScript</p>
             </li>
+
             <!-- CSS -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -354,6 +354,7 @@
               </svg>
               <p class="skill-name">CSS</p>
             </li>
+
             <!-- GITHUB -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24"
@@ -365,6 +366,7 @@
               </svg>
               <p class="skill-name">GitHub</p>
             </li>
+
             <!-- mysql -->
             <li class="clients-item">
               <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img"
@@ -389,6 +391,7 @@
               </svg>
               <p class="skill-name">MySQL</p>
             </li>
+
             <!-- Git -->
             <li class="clients-item">
               <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 32 32">
@@ -399,6 +402,7 @@
               </svg>
               <p class="skill-name">GIT</p>
             </li>
+
             <li class="clients-item">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 240 234"
@@ -443,6 +447,7 @@
               </svg>
               <p class="skill-name">Photosop</p>
             </li>
+
           </ul>
         </section>
       </article>
