--- a/index.html
+++ b/index.html
@@ -133,31 +133,31 @@
         <ul class="navbar-list">
           <li class="navbar-item">
             <a href="#about" class="navbar-link active" data-nav-link>
-              <i class="fas fa-user"></i>
+              <!-- <i class="fas fa-user"></i> -->
               <span>About</span>
             </a>
           </li>
           <li class="navbar-item">
             <a href="#resume" class="navbar-link" data-nav-link>
-              <i class="fas fa-file-alt"></i>
+              <!-- <i class="fas fa-file-alt"></i> -->
               <span>Resume</span>
             </a>
           </li>
           <li class="navbar-item">
             <a href="#certificate" class="navbar-link" data-nav-link>
-              <i class="fas fa-certificate"></i>
+              <!-- <i class="fas fa-certificate"></i> -->
               <span>Certificate</span>
             </a>
           </li>
           <li class="navbar-item">
             <a href="#project" class="navbar-link" data-nav-link>
-              <i class="fas fa-project-diagram"></i>
+              <!-- <i class="fas fa-project-diagram"></i> -->
               <span>Projects</span>
             </a>
           </li>
           <li class="navbar-item">
             <a href="#contact" class="navbar-link" data-nav-link>
-              <i class="fas fa-envelope"></i>
+              <!-- <i class="fas fa-envelope"></i> -->
               <span>Contact</span>
             </a>
           </li>
@@ -479,11 +479,9 @@
                 <h4 class="h4 timeline-item-title">University Technology Yogyakarta</h4>
                 <span class="timeline-date">Oct 2019 — July 2023</span>
                 <p class="timeline-text">
-                  Graduated with a S.Kom. degree in Computer Science, with a GPA of <strong>3.49/4.0</strong>
-                  demonstrating
-                  proficiency in programming, problem solving, and software development. Eager to
-                  apply knowledge
-                  in the dynamic technology industry.
+                  Graduated with a S.Kom. degree in Computer Science, demonstrating proficiency in programming,
+                  problem-solving, and software development. Eager to apply knowledge and contribute to the dynamic
+                  technology industry.
                 </p>
               </div>
             </li>
