--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
               </a>
             </li>
 
-            <li class="project-item active" data-filter-item data-category="out academic">
+            <!-- <li class="project-item active" data-filter-item data-category="out academic">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -757,7 +757,7 @@
                 <h3 class="project-title">Certificate Partisipan</h3>
                 <p class="project-category">Carerr in React JS</p>
               </a>
-            </li>
+            </li> -->
 
             
           </ul>
